--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -2,9 +2,7 @@
   Tag: <%= @tag.tag %>
 <% end %>
 
-<h1>Tag: <%= @tag.tag %></h1>
-
-<h2>Stories Tagged With: <%= @tag.tag %></h2>
+<h1>Tag: <%= @tag.tag %> (<%= @tag.story_count %>)</h1>
 
 <ol class="object-list stories-list">
 <% @stories.each do |story| %>
