--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,5 +1,5 @@
 <p>This is the new ficlets archive. It was a lovely thing I built with a bunch of lovely people back at AOL...  which was now a very long time ago.  This archive is based on the <a href="http://ficly.com">ficly archive</a> with some changes for the craaaazy exported version of ficlets.</p>
-<p>You should start by <%= link_to "browsing the stories", stories_path %>, perusing our <%= link_to "many amazing authors", authors_path %>.</p>
+<p>You should start by <%= link_to "browsing the stories", stories_path %>, perusing our <%= link_to "many amazing authors", authors_path %>, or some truly interesting <%= link_to "tags", tags_path %>.</p>
 <p>I don't expect this page to get updated very often.  Thank for reading.</p>
 <p>
 Love,<br/>
